new files added

--- a/train-objective-2.ipynb
+++ b/train-objective-2.ipynb
@@ -1577,11 +1577,78 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "https://www.microway.com/hpc-tech-tips/nvidia-turing-tesla-t4-hpc-performance-benchmarks/ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.nvidia.com/content/dam/en-zz/Solutions/Data-Center/tesla-t4/t4-tensor-core-datasheet-951643.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.servethehome.com/nvidia-tesla-t4-ai-inferencing-gpu-review/3/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://blog.inten.to/hardware-for-deep-learning-part-3-gpu-8906c1644664?gi=1481d7aac7cb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"There is a trend towards using FP16 (half precision) instead of FP32 (single precision) because lower precision calculations seem to be not critical for neural networks. This also makes the double precision (FP64) not useful, because additional precision gives nothing, \n",
+    "while being slower\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"In addition to making possible to train and store larger models, switching to FP16 typically gives 2x speed improvement (2x more TFLOPS)\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"The situation is now changed with Turing architecture and the new series of RTX gaming cards (RTX 2070/2080/2080 Ti). Turing (Sept 2018)\n",
+    "chips support unrestricted FP16 calculations\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"Nvidia recently launched TESLA T4 inference accelerator with INT4 support, which is twice faster than INT8\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. INT8 preformnace is higher thatn FP32\n",
+    "2. FP32 Memory Consumption is higher than INT8\n",
+    "3. Recommnded to use FP16, and not FP32 (i.e. use float and not double)\n",
+    "\n",
+    "Conclusion (In General): For Training: use FP32\n",
+    "                         For Inference: use INT8               \n",
+    "                \n",
+    "CNN that were already trained alot  with FP32, is adviced to use FP16 and not INT8, since it might\n",
+    "affect accuracy after inference. (Although INT4/INT8 are much faster 130/260 TOPS than FP16/FP32 65/8 TOPS)"
+   ]
   },
   {
    "cell_type": "code",
