update bonus question

--- a/train-objective-2.ipynb
+++ b/train-objective-2.ipynb
@@ -1608,9 +1608,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"There is a trend towards using FP16 (half precision) instead of FP32 (single precision) because lower precision calculations seem to be not critical for neural networks. This also makes the double precision (FP64) not useful, because additional precision gives nothing, \n",
-    "while being slower\"\n",
-    "\n"
+    "https://developer.nvidia.com/blog/int4-for-ai-inference/#:~:text=NVIDIA%E2%80%99s%20Turing%20architecture%20introduced%20INT4%20precision%2C%20which%20offers,run%20multiple%20ensemble%20networks%20on%20a%20single%20GPU."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"There is a trend towards using FP16 (half precision) instead of FP32 (single precision) because lower precision calculations seem to be not critical for neural networks. This also makes the double precision (FP64) not useful, because additional precision gives nothing, while being slower\""
    ]
   },
   {
@@ -1636,18 +1641,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "1. INT8 preformnace is higher thatn FP32\n",
-    "2. FP32 Memory Consumption is higher than INT8\n",
-    "3. Recommnded to use FP16, and not FP32 (i.e. use float and not double)\n",
+    "From Tesla T4 Spec:\n",
+    "---------------------------    \n",
+    "Mixed-Precision (FP16/FP32) 65 TFLOPS\n",
+    "INT8 130 TOPS\n",
+    "INT4 260 TOPS\n",
     "\n",
-    "Conclusion (In General): For Training: use FP32\n",
-    "                         For Inference: use INT8               \n",
-    "                \n",
-    "CNN that were already trained alot  with FP32, is adviced to use FP16 and not INT8, since it might\n",
-    "affect accuracy after inference. (Although INT4/INT8 are much faster 130/260 TOPS than FP16/FP32 65/8 TOPS)"
+    "1. The INT4 gives the highest number of operation per second (260 TOPS)\n",
+    "   \"INT4 Reduced precision for AI inference represents another interesting area where optimizations can yield more performance \n",
+    "    from the same hardware with minimal accuracy loss\"\n",
+    "\n",
+    "2. The INT8 also gives high number of operation per second, which yield more performance w/ minimal accuracy loss\n",
+    "   Excluding the INT4 (there are still not much work experirnce with this precision) \n",
+    "   So, the INT8 will be chosen.\n",
+    "\n",
+    "3. But, in case we need floating point computations, then the FP16 will give the highet performance\n",
+    "   In case floating point is needed, then better to use FP16 then FP32            \n"
    ]
   },
   {
