--- a/train-objective-1.ipynb
+++ b/train-objective-1.ipynb
@@ -1,49 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a"
    },
-   "outputs": [],
    "source": [
-    "![Elbit AI Academy](images/ai_acadamy.jpg)"
+    "![Elbit AI Academy](images/ai_academy.jpg)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# <center> Final Project </center>\n"
+    "# <center> Project - deep learning modeling and optimization </center>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Objective:"
+    "## [Objective](./project-instructions.ipynb)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# see 'project-instructions.ipynb'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "## Import dependencies"
    ]
