--- a/train-objective-2.ipynb
+++ b/train-objective-2.ipynb
@@ -78,7 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "isRunningOnLocalMachine  = 1  # [0] - in case running on remote machine "
+    "isRunningOnLocalMachine  = 0  # [0] - in case running on remote machine \n",
+    "                              # [1] - in case running on local machine "
    ]
   },
   {
